--- a/websources/web/style.css
+++ b/websources/web/style.css
@@ -20,15 +20,17 @@ html {
     z-index: 50;
 }
 #intro video{
+    position: relative;
     width: 100vw;
+    top: -12.6vw;
 }
 
 header {
     text-align: center;
     position: relative;
     z-index: 10;
-    width: 80vw;
-    left: 10vw;
+    width: 100vw;
+    color: white;
 }
 header video{
     width: 100%;
@@ -52,7 +54,7 @@ body {
 main {
     position: relative;
     background-color: black;
-    top: 0vw;
+    top: 8vw;
     color: white;
     font-family: sans-serif;
     font-size: 1.1vw; 
@@ -88,35 +90,94 @@ main {
     cursor: pointer;
 }
 .short_about {
-    position: relative;
-    top: -4vw;
+    position: absolute;
+    font-size: 1.1vw; 
     left: 0;
-    height: 40vw;
+    height: 40%;
     width: 100%;
+    top: 58%;
+    z-index: 10;
 }
 .short_about p{
     text-align: justify;
     position: relative;
     margin: auto;
-    width: 40%;
-    top: 38%;
-    z-index: 6;
+    height: 50%;
+    width: 30%;
+    top: 0%;
     font-family: Arcon;
+    opacity: 0.7;
 }
 .short_about h1 {
     text-align: center;
     position: relative;
     width: 100%;
-    top: 35%;
+    top: 0%;
     z-index: 6;
     font-family: Picadilly;
     font-size: 2vw;
+    opacity: 0.9;
 }
 .short_about video{
     position: absolute;
     top: 0px;
     width: 100%;
 }
+#istorija{
+    margin-top: -8vw;
+    width: 100%;
+    height: 70vw;
+    background-color: #141414;
+}
+#istorija .photos{
+    position: absolute;
+    width: 25vw;
+    left: 20%;
+    top: 30vw;
+}
+#istorija h1 {
+    position: relative;
+    width: 100%;
+    top: 33vw;
+    left: 50%;
+    font-family: Picadilly;
+    font-size: 2vw;
+}
+#istorija p{
+    position: relative;
+    margin: auto;
+    width: 30%;
+    top: 33vw;
+    left: 15%;
+    font-family: Arcon;
+    opacity: 1;
+    line-height: 1.4;
+}
+#apie{
+    margin-top: -8vw;
+    width: 100%;
+    top: 0;
+    background-color: #141414;
+    line-height: 1.5;
+}
+#apie h1 {
+    position: relative;
+    width: 100%;
+    top: 0vw;
+    left: 35%;
+    font-family: Picadilly;
+    font-size: 2vw;
+}
+#apie p{
+    position: relative;
+    margin: auto;
+    width: 30%;
+    top: 0vw;
+    left: 0%;
+    font-family: Arcon;
+    opacity: 1;
+}
+
 .domai {
     --contentwidth: 80;
     background-color: rgb(8,8,8);
